Register css and html

--- a/register.html
+++ b/register.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Registration Form</title>
+    <link href="register.css" rel="stylesheet">
 </head>
-<body>
-    <h2>User Registration</h2>
-    <form action="" method="post">
-        <label for="fullname">Full Name:</label><br>
+<body class="body">
+    <h2 class="header1">User Registration</h2>
+    <form action="register.php" method="post" class="form-group">
+        <label for="fullname" >Full Name:</label><br>
         <input type="text" id="fullname" name="fullname" required><br><br>
         
         <label for="username">Username:</label><br>
